--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>This is my website</h1>
+    <p>I'm Stefhanie</p>
+    <p>I am a college student</p>
+    <p>I love sleeping</p>
     
+    <button>Click me</button>    
 </body>
 </html>
