add:update personal info

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h1>This is my website</h1>
-    <p>I'm Stefhanie</p>
-    <p>I am a college student</p>
-    <p>I love sleeping</p>
-    
+    <p>I'm Stefhanie currently a college student of Jose Rizal Memorial State University under BSCS Program</p>
+    </p>If you wish to know more about me, ere's my gmail: stefhanie937@gmail.com</p>
+ 
     <button>Click me</button>    
 </body>
 </html>
